Updated lab2 to write out the results.